Cancel button improved

--- a/OnurOgLeila/Betaling1.html
+++ b/OnurOgLeila/Betaling1.html
@@ -29,9 +29,9 @@
     </script>
 
     <input id="rgr_btn" type="button" value="Betal" />
-    <ul>
-    <li><a type="button" href="../../Voreswebsite.html">Fortryd</a></li>
-    </ul>
+<br>
+    <input id="cancel" type="button" value="Fortryd"/>
+
 </form>
 <script src="Payment_class.js"></script>
 <script src="User_Class.js"> </script>
