Button to go back in reviews was added

--- a/OnurOgLeila/review.html
+++ b/OnurOgLeila/review.html
@@ -37,6 +37,7 @@
         </div>
     </div>
 </div>
+<input id="cancel" type="button" value="Gå tilbage"/>
 
 <script src="review.js"></script>
 </body>
