--- a/Master/userPage.html
+++ b/Master/userPage.html
@@ -78,6 +78,6 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
 <br>
 
 <script src="User_Class.js"></script>
-<script src="Userpage.js"> </script>
+<script src="UserPage.js"> </script>
 </body>
 </html>
